# self-study-2

./: CMakeLists.txt  Dockerfile  Dockerfile-docker  Dockerfile-jenkins  Dockerfile_gtest  Jenkinsfile  Makefile  Makefile_debian  README.md  casc.yaml  docker-compose.yml  main.cpp  plugins.txt  says_hello_world.h  test.cpp
docker-config/: config.json
